FIx webkit scrollbar for the slices control

--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,15 @@ body {
     height: 100%;
 }
 
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, .5);
+    -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+}
 
 .container {
     width: calc(100vw);
